# Frontend

./: .gitignore  README.md  arcader-frontend.json
.github/workflows/: release.yml
arcaderui/: .editorconfig  api.gd  api.gd.uid  communicator.gd  communicator.gd.uid  cover_cache.gd  cover_cache.gd.uid  export_presets.cfg  game_menu.gd  game_menu.gd.uid  health_checker.gd  health_checker.gd.uid  icon.png.import  nav_repeat.gd  nav_repeat.gd.uid  project.godot  screen_manager.gd  screen_manager.gd.uid  timer_overlay.gd  timer_overlay.gd.uid  ui_factory.gd  ui_factory.gd.uid  usb_manager.gd  usb_manager.gd.uid
arcaderui/addons/unix-socket/: lib.gdextension  lib.gdextension.uid  libunixsocket.macos.debug.universal.dylib  libunixsocket.macos.release.universal.dylib
arcaderui/assets/: RetroGaming.ttf.import  background.png.import  banner.png.import  rounded.gdshader  rounded.gdshader.uid
arcaderui/assets/sprites/: acceptor.png.import  arrow_down.png.import  arrow_left.png.import  arrow_right.png.import  (+14 more)
arcaderui/scenes/: CoinScreen.gd  CoinScreen.gd.uid  CoinScreen.tscn  ControllerConfig.gd  ControllerConfig.gd.uid  ControllerConfig.tscn  CoverCard.gd  CoverCard.gd.uid  CoverCard.tscn  GameItem.gd  GameItem.gd.uid  GameMenu.tscn  GamesList.gd  GamesList.gd.uid  GamesList.tscn  GamesList.tscn.uid  Loading.tscn  MainMenu.gd  MainMenu.gd.uid  MainMenu.tscn  Search.gd  Search.gd.uid  Search.tscn  TimerOverlay.tscn  UsbTransfer.gd  UsbTransfer.gd.uid  UsbTransfer.tscn
extensions/unixsocket/: Cargo.toml
extensions/unixsocket/src/: lib.rs
scripts/: build-frontend.sh
